--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "homepage": "https://Serhiy75.github.io/pocemon-react-individual/",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "i": "^0.3.7",
     "modern-normalize": "^2.0.0",
+    "notiflix": "^3.2.6",
     "npm": "^10.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
