--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://Serhiy75.github.io/pocemon-react-individual/",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -17,9 +18,11 @@
     "react-dom": "^18.1.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.8",
     "web-vitals": "^2.1.3"
   },
