--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "formik": "^2.4.5",
     "i": "^0.3.7",
     "modern-normalize": "^2.0.0",
     "notiflix": "^3.2.6",
