--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.0.0",
     "react-tabs": "^6.0.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.8",
