--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-tabs": "^6.0.2",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.8",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
