--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "notiflix": "^3.2.6",
     "npm": "^10.1.0",
     "react": "^18.1.0",
+    "react-calendar": "^4.6.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
